--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/addFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/addFragment"
-        android:name="com.example.fullstackapp.AddFragment"
+        android:name="com.example.fullstackapp.fragments.AddFragment"
         android:label="add_fragment"
         tools:layout="@layout/add_fragment" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.fullstackapp.fragments.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/home_fragment">
+        <action
+            android:id="@+id/action_homeFragment_to_addFragment"
+            app:destination="@id/addFragment" />
+    </fragment>
 </navigation>
