--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/addFragment"
         android:name="com.example.fullstackapp.fragments.AddFragment"
         android:label="add_fragment"
-        tools:layout="@layout/add_fragment" />
+        tools:layout="@layout/add_fragment" >
+        <action
+            android:id="@+id/action_addFragment_to_saveFragment"
+            app:destination="@id/saveFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.fullstackapp.fragments.HomeFragment"
@@ -40,4 +44,9 @@
             android:name="phone"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/saveFragment"
+        android:name="com.example.fullstackapp.fragments.SaveFragment"
+        android:label="SaveFragment"
+        tools:layout="@layout/save_data_firestor_fargment"/>
 </navigation>
