added firestore retriving data

--- a/app/src/main/res/layout/save_data_firestor_fargment.xml
+++ b/app/src/main/res/layout/save_data_firestor_fargment.xml
@@ -90,4 +90,14 @@
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/buttontoview"
+        android:layout_width="match_parent"
+        android:layout_marginTop="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_edit_text_bg"
+        android:text="view"
+        android:backgroundTint="@android:color/black" />
 </LinearLayout>
