--- a/app/src/main/res/drawable/rounded_edit_text_bg.xml
+++ b/app/src/main/res/drawable/rounded_edit_text_bg.xml
@@ -5,5 +5,5 @@
     <solid android:color="@android:color/white" /> <!-- Background color of the EditText -->
     <stroke
         android:width="1dp"
-    android:color="#000000" /> <!-- Border color (dark black) -->
+    android:color="#F3C122" /> <!-- Border color (dark black) -->
 </shape>
