--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
+
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.68"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="phone number"
+        android:hint="@string/phone_number"
         android:inputType="phone"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,22 +41,15 @@
         android:id="@+id/btnSend"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="Send data"
+        android:layout_marginTop="60dp"
+        android:text="@string/send_data"
+        android:backgroundTint="#F3C122"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPhone" />
-
-    <Button
-        android:id="@+id/navtp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="cloud firestore"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSend" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
