--- a/app/src/main/res/layout/rv_contacts_item.xml
+++ b/app/src/main/res/layout/rv_contacts_item.xml
@@ -5,13 +5,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
+    android:backgroundTint="#FFEEBA"
     android:elevation="10dp"
     android:layout_margin="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rv_container"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:padding="12dp">
 
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
 
             android:layout_marginTop="4dp"
-            android:text="name"
+            android:text="@string/name"
             android:textSize="28sp"
             android:textStyle="bold"
 
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="phone"
+            android:text="@string/phone"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/tvNameItem"
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="id"
+            android:text="@string/id"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/tvPhoneItem"
             app:layout_constraintTop_toBottomOf="@+id/tvPhoneItem" />
