--- a/app/src/main/res/layout/save_fetch_fragment.xml
+++ b/app/src/main/res/layout/save_fetch_fragment.xml
@@ -8,10 +8,10 @@
     <TextView
         android:id="@+id/textViewWelcome"
         android:layout_width="match_parent"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:textColor="@android:color/holo_blue_dark"
+        android:text="@string/data_you_saved"
+        android:textColor="#F3C122"
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center" />
@@ -20,6 +20,8 @@
         android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/rounded_edit_text_bg"
         android:text="Name"
         android:padding="10dp"
@@ -34,6 +36,8 @@
         android:background="@drawable/rounded_edit_text_bg"
         android:text="Address"
         android:padding="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="18sp" />
@@ -42,6 +46,8 @@
         android:id="@+id/textViewEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/rounded_edit_text_bg"
         android:text="Email"
         android:padding="10dp"
@@ -55,20 +61,97 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_edit_text_bg"
         android:text="Phone Number"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:padding="10dp"
         android:textColor="@android:color/black"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/buttonUpdateData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_gravity="center"
 
-        android:text="Update Your Data"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:textSize="18sp" />
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/textViewWelcomeup"
+            android:layout_width="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_height="wrap_content"
+            android:text="Update Your Data"
+            android:textColor="#F3C122"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:gravity="center" />
+
+        <EditText
+            android:id="@+id/editTextName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edit_text_bg"
+            android:hint="Name"
+            android:inputType="textPersonName"
+
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editTextAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edit_text_bg"
+            android:hint="Address"
+            android:inputType="textPersonName"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edit_text_bg"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editTextPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edit_text_bg"
+            android:hint="Phone Number"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/darker_gray"
+            android:textSize="18sp" />
+
+
+        <Button
+            android:id="@+id/buttonUpdateData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:text="Update"
+            android:textColor="@color/black"
+            android:backgroundTint="#F3C122"
+            android:textSize="18sp" />
+
+
+    </LinearLayout>
 
 </LinearLayout>
+
