--- a/app/src/main/res/layout/update_fragment.xml
+++ b/app/src/main/res/layout/update_fragment.xml
@@ -40,10 +40,13 @@
         android:id="@+id/btnSend"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="72dp"
+        android:backgroundTint="#F3C122"
         android:text="Update Data"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPhone" />
 
